# seam-ai-prep

./: .gitattributes  .gitignore  README.md  classes_w_typing.py  functions_w_typing.py  pyproject.toml  requirements.txt  setup.ps1
day_1/: functions_w_typing.py
day_1_typing/: classes_practice.py  extensions_testing.py  functions_practice.py
day_1_typing/old_typing_practice/: functions_w_typing.py  old_classes_practice.py  old_functions_practice.py
day_2_shell_venv_codebase/: pyproject.toml  requirements.txt
day_3_gitworkflows/: day_3.txt
powershell_scripts/: cleanup-branch.ps1  format_lint.ps1  setup.ps1
resume_intel/: README.md  requirements.txt  test_graph.py
resume_intel/app/: graph.py  main.py  models.py  test_graph.py
resume_intel/app/services/: extractors.py  summarizer.py
week1_foundations/day_1_typing/: functions_practice.py
week1_foundations/day_2_shell_venv_codebase/raghav-cookiecutter-python-boilerplate/: CODE_OF_CONDUCT.md  LICENSE  README.md  justfile  pyproject.toml
week1_foundations/day_2_shell_venv_codebase/raghav-cookiecutter-python-boilerplate/.github/: ISSUE_TEMPLATE.md
week1_foundations/day_2_shell_venv_codebase/raghav-cookiecutter-python-boilerplate/docs/: index.md  usage.md
week1_foundations/day_2_shell_venv_codebase/raghav-cookiecutter-python-boilerplate/src/raghav_cookiecutter_python_boilerplate/: cli.py
week1_foundations/day_3_gitworkflows/: day_3.txt  explore_gitpython.py
week_1_foundations/: common_decorators.txt  git_commit_messages_format.txt
week_1_foundations/day_1_typing/: functions_practice.py
week_1_foundations/day_1_typing/old_typing_practice/: old_classes_practice.py  old_functions_practice.py
week_1_foundations/day_2_shell_venv_codebase/: requirements.txt
week_1_foundations/day_2_shell_venv_codebase/raghav-cookiecutter-python-boilerplate/: .gitignore  CONTRIBUTING.md
week_1_foundations/day_2_shell_venv_codebase/raghav-cookiecutter-python-boilerplate/docs/: installation.md
week_1_foundations/day_2_shell_venv_codebase/raghav-cookiecutter-python-boilerplate/src/raghav_cookiecutter_python_boilerplate/: __init__.py  cli.py
week_1_foundations/day_2_shell_venv_codebase/raghav-cookiecutter-python-boilerplate/tests/: __init__.py  test_raghav_cookiecutter_python_boilerplate.py
week_1_foundations/day_3_gitworkflows/: day_3.txt  explore_gitpython.py
week_1_foundations/day_4_vscode_&_debugging/: asyncio_notes.txt  debug_breakpoint_notes.txt  debug_demo.py
week_1_foundations/day_5_pydantic/: models.py  pixegami_pydantic_tutorial.py  pydantic_notes.txt  test_models.py
week_1_foundations/day_6_fastapi_basics/: fastapi_notes.txt  main.py  schemas.py
week_1_foundations/day_6_fastapi_basics/tests/: test_main.py
week_1_foundations/day_7_async_fastapi/: async_httpx_example.py  async_practice.py  main.py
week_2_langgraph_llm/day_8_langgraph_basics/: app.py
week_2_langgraph_llm/day_9_async_integration/: memory_app.py
