[project]
name = "raghav-cookiecutter-python-boilerplate"
version = "0.1.0"
description = "Raghav Cookiecutter Python Boilerplate is a study tool Raghav is using to better understand how the cookiecutter package works. From what I understand, this should generate a project template with my custom inputs that's based on the original author's base template"
readme = "README.md"
authors = [
  {name = "Raghav Gaur", email = "raghavgaurrg@gmail.com"}
]
maintainers = [
  {name = "Raghav Gaur", email = "raghavgaurrg@gmail.com"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/RaghavGaurML/raghav_cookiecutter_python_boilerplate/issues"
changelog = "https://github.com/RaghavGaurML/raghav_cookiecutter_python_boilerplate/blob/master/changelog.md"
homepage = "https://github.com/RaghavGaurML/raghav_cookiecutter_python_boilerplate"

[project.scripts]
raghav_cookiecutter_python_boilerplate = "raghav_cookiecutter_python_boilerplate.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
